describe("ImportTimelineItem", () => {
  describe("render tests", () => {
    test.todo("should render with provided importProcessState")
      // GIVEN an importProcessState
      // WHEN the component is rendered
      // THEN expect no errors or warning to have occurred
      // AND the component to be displayed
      // AND the importProcessStateContent component to be displayed
      // AND the ImportProcessStateContent to have been called with the correct props
      // AND the timelineSeparator component to be displayed
      // AND the timelineDot component to be displayed
      // AND the TimelineDot to have been called with the correct props
      // AND the timestamp to be displayed
      // AND the TextPropertyField to have been called with the correct props
      // AND the timelineOppositeContent component to be displayed
      // AND the TimelineOppositeContent to have been called with the correct props
      // AND the component to match the snapshot
  });
});

